Reorganizando a estrutura do componente Header para um novo diretório e adicionando estilos CSS

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,9 @@
 ---
 import Layout from '../layouts/Layout.astro';
 // Apenas mude a importação para o novo arquivo .astro
-import Header from '../components/Header.astro'; 
+import Header from '../components/Header/Header.astro'; 
 ---
 
 <Layout>
-    {/* Nenhuma prop ou hydration (client:load) é necessária */}
     <Header />
 </Layout>
