Adicionando configuração do Prettier e integrando novos componentes Hero e Header. Aplica estilos usando classes em Hero, mas ainda falta aplicar responsividade.

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,5 @@
 .custom-font {
-  font-family: "Big Shoulders", sans-serif;
+  font-family: 'Big Shoulders', sans-serif;
 }
 /* Base do Header */
 .header {
