--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,11 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import Layout from '../layouts/Layout.astro'
 // Apenas mude a importação para o novo arquivo .astro
-import Header from '../components/Header/Header.astro'; 
+import Header from '../components/Header/Header.astro'
+import Hero from '../components/1 - Hero/Hero.astro'
 ---
 
 <Layout>
-    <Header />
+  <Header />
+  <Hero />
 </Layout>
