--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,7 +16,7 @@ import '../styles.css'
       rel="stylesheet"
     />
     <meta name="generator" content={Astro.generator} />
-    <title>Code Connect</title>
+    <title>Core Fibra</title>
   </head>
   <body class="bg-base-100 text-neutral">
     <slot />
