Adicionando componente Conectividade com estilos e estrutura. Integrando ao layout principal.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,9 +3,11 @@ import Layout from '../layouts/Layout.astro'
 // Apenas mude a importação para o novo arquivo .astro
 import Header from '../components/Header/Header.astro'
 import Hero from '../components/1 - Hero/Hero.astro'
+import Conectividade from '../components/2 - Conectividade/Conectividade.astro'
 ---
 
 <Layout>
   <Header />
   <Hero />
+  <Conectividade />
 </Layout>
