--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,10 +4,12 @@ import Layout from '../layouts/Layout.astro'
 import Header from '../components/Header/Header.astro'
 import Hero from '../components/1 - Hero/Hero.astro'
 import Conectividade from '../components/2 - Conectividade/Conectividade.astro'
+import Planos from '../components/3 - Planos/Planos.astro'
 ---
 
 <Layout>
   <Header />
   <Hero />
   <Conectividade />
+  <Planos />
 </Layout>
