--- a/src/components/3 - Planos/Planos.astro
+++ b/src/components/3 - Planos/Planos.astro
@@ -4,17 +4,41 @@ import { Image } from 'astro:assets'
 import iconeSeta from '../../assets/images/elements/SVG/SETA-VERDE.svg'
 import iconeSetaBranca from '../../assets/images/elements/SVG/SETA-BRANCA-BOTAO.svg'
 import imagemPessoas from '../../assets/images/IMG-TEC_CONFIAVEL@2x.webp'
+
+// Array de planos
+const planos = [
+  {
+    id: 1,
+    titulo: 'PLANOS CORECORP',
+    subtitulo: '– PMEs ESTRUTURADAS',
+    destaque: false,
+  },
+  {
+    id: 2,
+    titulo: 'PLANOS COREDEDICATED',
+    subtitulo: '– OPERAÇÕES DE MISSÃO CRÍTICA',
+    destaque: true,
+  },
+  {
+    id: 3,
+    titulo: 'PLANOS COREBUSINESS',
+    subtitulo: '– PROFISSIONAIS INDEPENDENTES E EMPREENDEDORES',
+    destaque: false,
+  },
+]
 ---
 
 <section class="planos-section">
   <div class="planos-section__content">
     <div class="planos-section__text">
-      <h2>TECNOLOGIA CONFIÁVEL COM FOCO TOTAL EM RESULTADO.</h2>
-      <p>
+      <h2 class="planos-section__title">
+        TECNOLOGIA<br /> CONFIÁVEL COM FOCO TOTAL EM RESULTADO.
+      </h2>
+      <p class="planos-section__description">
         Especialista em infraestrutura e negócios, a CoreFibra garante conexão
         robusta, escalável e sob medida para cada operação.
       </p>
-      <p>
+      <p class="planos-section__description--white">
         Do diagnóstico à ativação e expansão, oferecemos acompanhamento próximo
         e especializado.
       </p>
@@ -24,5 +48,29 @@ import imagemPessoas from '../../assets/images/IMG-TEC_CONFIAVEL@2x.webp'
       alt="Pessoas utilizando tecnologia"
       class="planos-section__image"
     />
+  </div>
+  <div class="planos-section__plans">
+    <ul class="planos-list">
+      {
+        planos.map((plano) => (
+          <li class="planos-list__item">
+            <Image src={iconeSeta} alt="Seta verde" class="planos-list__icon" />
+            <div class="planos-list__text">
+              <span class="planos-list__title">{plano.titulo}</span>
+              <span class="planos-list__subtitle">{plano.subtitulo}</span>
+            </div>
+          </li>
+        ))
+      }
+    </ul>
+  </div>
+  <div class="planos-section__cta">
+    <p class="planos-section__description">
+      Escolha o melhor plano para sua empresa.
+    </p>
+    <button class="planos-section__cta-button">
+      SOLICITE UMA PROPOSTA PERSONALIZADA
+      <Image src={iconeSetaBranca} alt="Ícone de seta" class="arrow-icon" />
+    </button>
   </div>
 </section>
