--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,11 @@
 ---
 import Layout from '../layouts/Layout.astro'
 // Apenas mude a importação para o novo arquivo .astro
-import Header from '../components/Header/Header.astro'
+import Header from '../components/0 - Header/Header.astro'
 import Hero from '../components/1 - Hero/Hero.astro'
 import Conectividade from '../components/2 - Conectividade/Conectividade.astro'
 import Planos from '../components/3 - Planos/Planos.astro'
+import Conexao from '../components/4 - Conexao/Conexao.astro'
 ---
 
 <Layout>
@@ -12,4 +13,5 @@ import Planos from '../components/3 - Planos/Planos.astro'
   <Hero />
   <Conectividade />
   <Planos />
+  <Conexao />
 </Layout>
