--- a/src/components/3 - Planos/Planos.css
+++ b/src/components/3 - Planos/Planos.css
@@ -13,7 +13,7 @@
 .planos-section {
   background-color: var(--color-gray);
   min-height: 100vh;
-  padding: 2% 5%;
+  padding: 5% 5%;
 }
 
 .planos-section__content {
@@ -54,6 +54,7 @@
 }
 
 .planos-section__description {
+  font-family: 'Roboto', sans-serif;
   color: var(--color-dark-blue);
   font-size: 2.25rem;
   line-height: 1.4;
@@ -61,6 +62,7 @@
 }
 
 .planos-section__description--white {
+  font-family: 'Roboto', sans-serif;
   color: var(--color-white);
   font-size: 2.25rem;
   line-height: 1.4;
@@ -101,6 +103,7 @@
 }
 
 .planos-list__text {
+  font-family: 'Roboto', sans-serif;
   display: flex;
   flex-direction: row;
   align-items: baseline;
@@ -129,7 +132,7 @@
   flex-direction: column;
   align-items: center;
   gap: 2rem;
-  margin: 1.5% 0 4% 0;
+  margin-top: 1.5%;
   text-align: center;
 }
 
