Adicionando novo componente de contato com estrutura e estilos, incluindo imagens e formulário de contato. Ajustando estilos do componente Conexao para melhorar layout e responsividade.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import Hero from '../components/1 - Hero/Hero.astro'
 import Conectividade from '../components/2 - Conectividade/Conectividade.astro'
 import Planos from '../components/3 - Planos/Planos.astro'
 import Conexao from '../components/4 - Conexao/Conexao.astro'
+import Gente from '~/components/5 - Contato/Contato.astro'
 ---
 
 <Layout>
@@ -14,4 +15,5 @@ import Conexao from '../components/4 - Conexao/Conexao.astro'
   <Conectividade />
   <Planos />
   <Conexao />
+  <Gente />
 </Layout>
