--- a/src/components/4 - Conexao/Conexao.css
+++ b/src/components/4 - Conexao/Conexao.css
@@ -21,7 +21,7 @@
 .conexao-section__texto {
   width: 100%;
   max-width: 1800px;
-    padding: 3rem 3% 5rem 3%;
+  padding: 3rem 3% 5rem 3%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -232,6 +232,7 @@
   .conexao-section__descricao,
   .conexao-section__destaque {
     font-size: 1.2rem;
+    margin-bottom: 0.5rem;
   }
   .conexao-section__imagens {
     flex-direction: column;
@@ -253,14 +254,13 @@
     width: 1.2rem;
     height: 1.2rem;
   }
-    .cta-texture {
-        margin-top: 0;
-    }
+  .cta-texture {
+    margin-top: 0;
+  }
 }
 
 /* Celulares (abaixo de 576px) */
 @media (max-width: 576px) {
-
   .conexao-section__titulo {
     font-size: 3rem;
     line-height: 1.2;
@@ -281,7 +281,7 @@
   .conexao-section__texto__imagem {
     font-size: 1.4rem;
   }
-  .conexao-section__botao{
+  .conexao-section__botao {
     margin: 1rem 0 2rem 0;
   }
   .cta-button__conexao {
