--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import Conectividade from '../components/2 - Conectividade/Conectividade.astro'
 import Planos from '../components/3 - Planos/Planos.astro'
 import Conexao from '../components/4 - Conexao/Conexao.astro'
 import Gente from '~/components/5 - Contato/Contato.astro'
+import Rodape from '~/components/6 - Rodape/Rodape.astro'
 ---
 
 <Layout>
@@ -16,4 +17,5 @@ import Gente from '~/components/5 - Contato/Contato.astro'
   <Planos />
   <Conexao />
   <Gente />
+  <Rodape />
 </Layout>
